# qcom-oss-pypi-pilot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/qcom_oss_pilot_hello/: __init__.py  hello.py
tests/: test_hello.py
