[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcom-oss-pypi-pilot"
version = "0.1.0"
description = "A minimal pilot package for Qualcomm OSS PyPI publishing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Qualcomm Innovation Center, Inc." },
]
keywords = ["qualcomm", "pilot", "hello"]
classifiers = [
  "License :: OSI Approved :: BSD Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
qcom-hello = "qcom_oss_pypi_pilot.hello:main"

[project.urls]
Homepage = "https://github.com/quic/pypi-pilot"
"Bug Tracker" = "https://github.com/quic/pypi-pilot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qcom_oss_pypi_pilot"]
